added action to form

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Welcome to Our WiFi</h1>
-<form id="loginForm">
+<form id="loginForm" action="email_capture.php" method="POST">
   <label>Email Address:</label><br>
   <input type="email" name="email" required><br><br>
   <button type="submit">Connect</button>
